<resources>
    <string name="app_name">G01-Timebanking</string>
    <string name="app_title">Piggy TimeBank</string>
    <!--    profile strings -->
    <string name="name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="biography">Biography</string>
    <string name="personalData">Personal data</string>
    <string name="skills">Skills</string>
    <string name="skill1">Skill1</string>
    <string name="skill2">Skill2</string>
    <string name="skill3">Skill3</string>
    <string name="preference_file_key">basicPreferencesFile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_info">profile</string>
    <string name="adv_list">advertisements_list</string>

    <string name="namePlaceholder">No name</string>
    <string name="nicknamePlaceholder">No nickname</string>
    <string name="emailPlaceholder">No email address</string>
    <string name="locationPlaceholder">No location</string>
    <string name="biographyPlaceholder">No biography provided</string>
    <string name="skillsPlaceholder">No skills provided</string>

    <string name="nameHint">Insert your name here</string>
    <string name="nicknameHint">Insert your nickname here</string>
    <string name="emailHint">Insert your email here</string>
    <string name="locationHint">Insert your location here</string>
    <string name="biographyHint">Insert your biography here</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Time slot fragment strings -->
    <string name="title">Title</string>
    <string name="title_placeholder">No title</string>
    <string name="title_hint">Insert title</string>
    <string name="description">Description</string>
    <string name="description_placeholder">No description</string>
    <string name="description_hint">Insert the description of your offered job</string>
    <string name="date">Date</string>
    <string name="date_placeholder">No date</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="time">Time</string>
    <string name="time_placeholder">No time</string>
    <string name="time_hint">hh:mm</string>
    <string name="duration">Duration</string>
    <string name="duration_placeholder">No duration</string>
    <string name="duration_hint">insert your time availability</string>

    <!-- Your offers strings -->
    <string name="your_offers">Your offers</string>

    <!--    navbar strings -->
    <string name="menu_your_offers">Your Advertisements</string>
    <string name="menu_skills_list">Home</string>
    <string name="menu_show_profile">Your profile</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_my_chats">Chat</string>
    <string name="menu_assigned_timeslots">Assigned timeslots</string>
    <string name="menu_saved_timeslots">Saved timeslots</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_show_time_slot">Show Time Slot Details</string>
    <string name="menu_edit_time_slot">Edit Time Slot Details</string>
    <string name="menu_reviews_list">Your Reviews</string>
    <string name="adv_list_by_skill">Advertisements</string>
    <string name="adv_list_filters">Apply filters</string>
    <!-- Advertisements Hints -->
    <string name="shr_hint_title">Advertisement title</string>
    <string name="shr_hint_location">Location</string>
    <string name="shr_hint_description">Description</string>
    <string name="shr_hint_duration">Duration (hh:mm)</string>
    <string name="shr_hint_date">Date</string>
    <string name="shr_hint_time">Time</string>
    <string name="confirm_adv_button_text">Confirm</string>
    <string name="cancel_adv_button_text">Cancel</string>
    <string name="back_adv_button_text">Back</string>
    <string name="shr_hint_fullName">Full name</string>
    <string name="shr_hint_nickname">Nickname</string>
    <string name="shr_hint_email">Email</string>
    <string name="shr_hint_biography">Biography</string>
    <string name="shr_hint_skills">Insert your skill here</string>
    <string name="add_new_advertisement">Add new advertisement</string>
    <string name="g01_web_client_id">109354753026-08kb3t7cbl9gt82d3a82mcqb1fpft1kk.apps.googleusercontent.com</string>
    <string name="SignInActivity">SignInActivity</string>
    <string name="offered_by">Offered by</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sorting">Sort</string>
    <string name="filtering">Filter</string>
    <string name="long_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>



</resources>