<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_skills_list"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_skills_list" />
        <item
            android:id="@+id/nav_your_offers"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_your_offers" />
        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_account_outline"
            android:title="@string/menu_show_profile" />
        <item
            android:id="@+id/nav_my_chats"
            android:icon="@drawable/ic_chats"
            android:title="@string/menu_my_chats" />
        <item
            android:id="@+id/nav_assigned_timeslots"
            android:icon="@drawable/ic_assigned_timeslots"
            android:title="@string/menu_assigned_timeslots" />
        <item
            android:id="@+id/nav_saved_timeslots"
            android:icon="@drawable/ic_favorite_menu"
            android:title="@string/menu_saved_timeslots" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>