<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_your_offers">

    <fragment
        android:id="@+id/nav_show_time_slot"
        android:name="it.polito.mad.g01_timebanking.ui.timeslotdetails.TimeSlotDetailsFragment"
        android:label="@string/menu_show_time_slot"
        tools:layout="@layout/fragment_time_slot_details" />

    <fragment
        android:id="@+id/nav_edit_time_slot"
        android:name="it.polito.mad.g01_timebanking.ui.timeslotedit.TimeSlotEditFragment"
        android:label="@string/menu_edit_time_slot"
        tools:layout="@layout/fragment_time_slot_edit" />
    <fragment
        android:id="@+id/nav_your_offers"
        android:name="it.polito.mad.g01_timebanking.ui.timeslotlist.TimeSlotListFragment"
        android:label="@string/menu_your_offers"
        tools:layout="@layout/fragment_time_slot_list" />

</navigation>