<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timeslotdetails.TimeSlotEditFragment">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleShowTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_title"
                app:startIconDrawable="@drawable/ic_advertisement_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationShowTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_location"
                app:startIconDrawable="@drawable/ic_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateShowTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="false"
                android:hint="@string/shr_hint_date"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeShowTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="false"
                android:hint="@string/shr_hint_time"
                app:startIconDrawable="@drawable/ic_clock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/durationShowTextInputLayout"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_duration"
                app:startIconDrawable="@drawable/ic_hourglass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/durationShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/skillsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/skills"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noSkillsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/skillsPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/skillgroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/skill1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill1" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/skill2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill2" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/skill3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill3" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:id="@+id/descriptionShowTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/shr_hint_description"
                app:startIconDrawable="@drawable/ic_description"
                app:counterEnabled="true"
                app:counterMaxLength="160" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionShowText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>